# trace

./: .gitmodules  CMakeLists.txt  README.md  acceleration_structure.cpp  acceleration_structure.h  allocation.cpp  allocation.h  command_buffer.h  common.h  context.cpp  context.h  engine.cpp  engine.h  input_glfw_system.cpp  input_glfw_system.h  input_keyboard_system.cpp  input_keyboard_system.h  main.cpp  raytracing_pipeline.cpp  raytracing_pipeline.h  renderer.cpp  renderer.h  scene.cpp  scene.h  shader_system.cpp  shader_system.h  shader_types.h  swapchain.cpp  swapchain.h  system.h  ui_system.cpp  ui_system.h  vcpkg.json  window.cpp  window.h
core/: device_data.hpp  entities.h  entities.hpp  scene.cpp  scene.h  scene.hpp  shader_data.hpp  shader_types.h  shader_types.hpp  system.h  window.cpp
engine/: CMakeLists.txt  engine.cpp  engine.hpp  input_glfw_system.cpp  input_glfw_system.hpp  main.cpp  shader_system.cpp  shader_system.hpp  ui_system.cpp  ui_system.hpp  window.cpp  window.hpp
engine/cmake/: Findaftermath.cmake  Findshaderc.cmake
engine/core/: character.cpp  character.hpp  device_data.hpp  scene.hpp  shader.hpp  shader_data.hpp  system.hpp  transform.hpp  transform_helpers.hpp
engine/engine/: app.cpp  app.hpp  editor.cpp  editor.hpp  engine.cpp  engine.hpp  gltf_loader.cpp  gltf_loader.hpp  input_glfw_system.cpp  input_glfw_system.hpp  json.cpp  json.hpp  json_system.cpp  json_system.hpp  shader_system.cpp  shader_system.hpp  transform_system.cpp  transform_system.hpp  ui_system.cpp  ui_system.hpp  window.cpp  window.hpp
engine/include/openxr/: openxr.hpp
engine/shaders/engine/: ambient_occlusion.rahit  common_types.glsl  lighting.glsl  primary.rchit  primary.rint  primary.rmiss  raygen.rgen  raygen_desktop.rgen  raygen_wide.rgen  raymarch.glsl  shadow.rahit  shadow.rmiss
engine/textures/: generate_noise.py
engine/vr/: glm_helpers.hpp  instance.cpp  instance.hpp  scene_vr_input.cpp  scene_vr_input.hpp  session.cpp  session.hpp  ui_vr_input.cpp  ui_vr_input.hpp  vr_common.hpp  vr_input.hpp  vr_swapchain.cpp  vr_swapchain.hpp
engine/vulkan/: acceleration_structure.cpp  acceleration_structure.hpp  aftermath_crash_tracker.cpp  aftermath_crash_tracker.hpp  aftermath_database.cpp  aftermath_database.hpp  command_buffer.hpp  command_checkpoint.hpp  context.cpp  context.hpp  desktop_mirror.cpp  desktop_mirror.hpp  desktop_swapchain.cpp  desktop_swapchain.hpp  imgui_render.cpp  imgui_render.hpp  raytracing_pipeline.cpp  raytracing_pipeline.hpp  renderer.cpp  renderer.hpp  texture.cpp  texture.hpp  vk_common.hpp  vma_buffer.cpp  vma_buffer.hpp  vma_image.cpp  vma_image.hpp
scenes/: CMakeLists.txt
scenes/demo/: CMakeLists.txt  demo.cpp  demo.hpp  main.cpp
scenes/demo/scene/: scene.json
scenes/demo/shaders/: cube.glsl  hand.glsl  miss.glsl  sphere.glsl  ui.glsl
scenes/ingenuity/: CMakeLists.txt  ingenuity.cpp  ingenuity.hpp  main.cpp
scenes/ingenuity/shaders/: ingenuity.glsl  miss.glsl
scenes/tournesol/: CMakeLists.txt  main.cpp  tournesol.cpp  tournesol.hpp
scenes/tournesol/scene/: scene.json
scenes/tournesol/shaders/: arm.glsl  body.glsl  haddock.glsl  hand.glsl  leg.glsl  milou.glsl  miss.glsl  rocket.glsl  tintin.glsl  ui.glsl
shaders/: common.glsl  common_primitives.glsl  common_raymarch.glsl  cube.glsl  cube.rchit  cube.rint  miss.glsl  miss.rmiss  raygen.rgen  sphere.glsl  sphere.rchit  sphere.rint
shaders/scene/: closesthit.glsl  common_primitives.glsl  common_types.glsl  cube.glsl  cube.rchit  cube.rint  hand.glsl  hand.rchit  hand.rint  miss.glsl  miss.rmiss  primary.rchit  primary.rint  primary.rmiss  raygen.rgen  raygen_narrow.rgen  raygen_side.rgen  raygen_wide.rgen  raymarch.glsl  shadow.rahit  shadow.rint  shadow.rmiss  sphere.glsl  sphere.rchit  sphere.rint
shaders/ui/: imgui_frag_shader.glsl
vr/: common.h  context.cpp  context.h  glm_helpers.hpp  imgui_input.cpp  imgui_input.h  input.cpp  input.h  input_system.h  input_system.hpp  instance.cpp  instance.h  instance.hpp  main_input_system.cpp  main_input_system.h  main_input_system.hpp  session.cpp  session.h  session.hpp  ui_input_system.cpp  ui_input_system.h  ui_input_system.hpp  ui_vr_input.cpp  vr_common.h  vr_common.hpp  vr_input.hpp  vr_swapchain.cpp  vr_swapchain.h
vulkan/: acceleration_structure.cpp  acceleration_structure.h  acceleration_structure.hpp  allocation.cpp  allocation.h  allocation.hpp  command_buffer.h  command_buffer.hpp  command_checkpoint.hpp  context.cpp  context.h  context.hpp  debug_callback.h  debug_callback.hpp  desktop_mirror.cpp  desktop_mirror.h  desktop_mirror.hpp  desktop_present.cpp  desktop_present.h  desktop_swapchain.cpp  desktop_swapchain.h  imgui_render.cpp  imgui_render.h  imgui_render.hpp  present.cpp  present.h  raytracing_pipeline.cpp  raytracing_pipeline.h  raytracing_pipeline.hpp  renderer.cpp  renderer.h  renderer.hpp  shader_compile.cpp  shader_compile.h  swapchain.cpp  swapchain.h  vk_common.h  vma_buffer.cpp  vma_image.cpp  vma_image.hpp
